added start of first song

--- a/frequencyTesting/makeSongs.ipynb
+++ b/frequencyTesting/makeSongs.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -49,13 +49,14 @@
    "source": [
     "def writeSong(path, song, notesDict, metronome):\n",
     "    for note, time in twinkleTwinkle:\n",
-    "        data = (\"{},{}\".format(notesDict[note], str(60 * 4 * time / 80)))\n",
-    "        app"
+    "        time = str(1000 * 60 * 4 * time / 80)\n",
+    "        data = (\"{},{}\".format(notesDict[note], time))\n",
+    "        appendToFile(path, data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -66,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -81,32 +82,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "261.63,0.75\n",
-      "261.63,0.75\n",
-      "392.00,0.75\n",
-      "392.00,0.75\n",
-      "440.00,0.75\n",
-      "440.00,0.75\n",
-      "392.00,1.5\n",
-      "349.23,0.75\n",
-      "349.23,0.75\n",
-      "329.63,0.75\n",
-      "329.63,0.75\n",
-      "293.66,0.75\n",
-      "293.66,0.75\n",
-      "261.63,1.5\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "writeSong('twinkleTwinkle.csv', twinkleTwinkle, notesDict, metronome)"
    ]
