working twinkle twinkle

--- a/code/songFileCreation/makeSongs.ipynb
+++ b/code/songFileCreation/makeSongs.ipynb
@@ -4,6 +4,17 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
     "collapsed": false
    },
    "outputs": [],
@@ -18,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -41,28 +52,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "def writeSong(path, song, notesDict, metronome):\n",
-    "    for note, time in twinkleTwinkle:\n",
+    "    for note, time in song:\n",
     "        time = int(float(1000 * 60 * 4 * time / 80))\n",
     "        data = (\"{},{}\".format(int(float(notesDict[note])), time))\n",
     "        appendToFile(path, data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "metronome = 80"
    ]
   },
   {
@@ -73,23 +73,90 @@
    },
    "outputs": [],
    "source": [
-    "twinkleTwinkle = [['C4', 1/4], ['C4', 1/4], ['G4', 1/4], ['G4', 1/4],\n",
-    "                  ['A4', 1/4], ['A4', 1/4], ['G4', 1/2],\n",
-    "                  ['F4', 1/4], ['F4', 1/4], ['E4', 1/4], ['E4', 1/4],\n",
-    "                  ['D4', 1/4], ['D4', 1/4], ['C4', 1/2],\n",
-    "                 ]"
+    "metronome = 40"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "pause = ['D2', 1/8]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "writeSong('twinkleTwinkle.csv', twinkleTwinkle, notesDict, metronome)"
+    "twinkleTwinkle = [['C5', 1/4],\n",
+    "                  ['C5', 1/4], ['C5', 1/4], ['G5', 1/4], ['G5', 1/4],\n",
+    "                  ['A5', 1/4], ['A5', 1/4], ['G5', 1/2],\n",
+    "                  ['F5', 1/4], ['F5', 1/4], ['E5', 1/4], ['E5', 1/4],\n",
+    "                  ['D5', 1/4], ['D5', 1/4], ['C5', 1/2],\n",
+    "                  \n",
+    "                  ['G5', 1/4], ['G5', 1/4], ['F5', 1/4], ['F5', 1/4],\n",
+    "                  ['E5', 1/4], ['E5', 1/4], ['D5', 1/2],\n",
+    "                  ['G5', 1/4], ['G5', 1/4], ['F5', 1/4], ['F5', 1/4],\n",
+    "                  ['E5', 1/4], ['E5', 1/4], ['D5', 1/2],\n",
+    "                  \n",
+    "                  ['C5', 1/4], ['C5', 1/4], ['G5', 1/4], ['G5', 1/4],\n",
+    "                  ['A5', 1/4], ['A5', 1/4], ['G5', 1/2],\n",
+    "                  ['F5', 1/4], ['F5', 1/4], ['E5', 1/4], ['E5', 1/4],\n",
+    "                  ['D5', 1/4], ['D5', 1/4], ['C5', 1/2]\n",
+    "                 ]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "song = []\n",
+    "for note in twinkleTwinkle:\n",
+    "    song.append(note)\n",
+    "    song.append(pause)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "os.remove('twinkleTwinkle.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "writeSong('twinkleTwinkle.csv', song, notesDict, metronome)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
