made arduino finall work

--- a/code/songFileCreation/makeSongs.ipynb
+++ b/code/songFileCreation/makeSongs.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
@@ -67,18 +67,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 40,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "metronome = 40"
+    "metronome = 140"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 41,
    "metadata": {
     "collapsed": true
    },
@@ -89,17 +89,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 47,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "twinkleTwinkle = [['C5', 1/4],\n",
+    "twinkleTwinkle = [\n",
     "                  ['C5', 1/4], ['C5', 1/4], ['G5', 1/4], ['G5', 1/4],\n",
     "                  ['A5', 1/4], ['A5', 1/4], ['G5', 1/2],\n",
     "                  ['F5', 1/4], ['F5', 1/4], ['E5', 1/4], ['E5', 1/4],\n",
     "                  ['D5', 1/4], ['D5', 1/4], ['C5', 1/2],\n",
+    "                  \n",
+    "#                   ['G6', 1/4], ['G6', 1/4], ['F6', 1/4], ['F6', 1/4],\n",
+    "#                   ['E6', 1/4], ['E6', 1/4], ['D6', 1/2],\n",
+    "#                   ['G6', 1/4], ['G6', 1/4], ['F6', 1/4], ['F6', 1/4],\n",
+    "#                   ['E6', 1/4], ['E6', 1/4], ['D6', 1/2],\n",
     "                  \n",
     "                  ['G5', 1/4], ['G5', 1/4], ['F5', 1/4], ['F5', 1/4],\n",
     "                  ['E5', 1/4], ['E5', 1/4], ['D5', 1/2],\n",
@@ -115,7 +120,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 48,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# twinkleTwinkle = [['D2', 1/8],['D2', 1/8],['D2', 1/8],['D2', 1/8],['D2', 1/8],['D2', 1/8]\n",
+    "#                  ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
    "metadata": {
     "collapsed": false
    },
@@ -129,9 +146,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 50,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -140,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 51,
    "metadata": {
     "collapsed": false
    },
@@ -150,13 +167,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "## "
+   ]
   },
   {
    "cell_type": "code",
